fix: login form on mobile

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -56,15 +56,6 @@
         justify-content: space-around;
     }
 
-    .left {
-    }
-
-    .right {
-    }
-
-    .center {
-    }
-
     .element {
         font-size: 1rem;
     }
