--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -11,6 +11,7 @@
 
 .container {
     flex-grow: 1;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
